# shared-enterprise

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  schema.sql
.claude/skills/entry/: SKILL.md
.claude/skills/shared-enterprise/: SKILL.md
scripts/: claims.py  db.py  embed.py  entry.py  index_files.py  init-db.py
shared_enterprise/: __init__.py  claims.py  cli.py  db.py  embed.py  entry.py  index_files.py  schema.sql
