[project]
name = "shared-enterprise"
version = "0.2.0"
description = "Files for authoring, database as read index"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
embeddings = ["fastembed>=0.7.4"]

[project.scripts]
shared-enterprise = "shared_enterprise.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared_enterprise"]

[tool.hatch.build.targets.wheel.force-include]
"schema.sql" = "shared_enterprise/schema.sql"
